--- a/.env
+++ b/.env
@@ -15,8 +15,12 @@ CENTRAL_WEBSOCKET_URL=https://server-yi14.onrender.com
 WS_PORT=4000
 
 # Central Backend Server
-CENTRAL_BACKEND_URL= https://backend-ether.onrender.com
+CENTRAL_BACKEND_URL=https://backend-ether.onrender.com
 
 # Server Port
 PORT=5000
 
+# Github
+GITHUB_CLIENT_ID=Iv23li2ZJouYuqAd5aeY
+GITHUB_CLIENT_SECRET=217084c936e6d20a2dec4607594ffd0f0a314867
+GITHUB_CALLBACK_URL=http://localhost:5173/api/auth/github/callback
