--- a/.env.exemple
+++ b/.env.exemple
@@ -20,3 +20,7 @@ CENTRAL_BACKEND_URL= https://backend-ether.onrender.com
 # Server Port
 PORT=5000
 
+# Github
+GITHUB_CLIENT_ID=Iv23li2ZJouYuqAd5aeY
+GITHUB_CLIENT_SECRET=217084c936e6d20a2dec4607594ffd0f0a314867
+GITHUB_CALLBACK_URL=http://localhost:8080/api/auth/github/callback
