--- a/.env.exemple
+++ b/.env.exemple
@@ -1,26 +1,8 @@
-# MongoDB Configuration
-MONGO_URI=mongodb://mongo:DqrxrdmufLPebamFezzXBIEUyacibPfn@interchange.proxy.rlwy.net:23611
-
-# Redis Configuration
-REDIS_URL=redis://default:JVqCakyhIwsrIlIxkudyBHIcOVttTWnc@gondola.proxy.rlwy.net:31661
-REDIS_PRIVATE_URL=redis://default:JVqCakyhIwsrIlIxkudyBHIcOVttTWnc@gondola.proxy.rlwy.net:31661
-
-# Cloudinary Configuration
-CLOUDINARY_URL=cloudinary://268366193423232:S3MBRxDsG6dk_l0eJXotNJHQluM@dp2ehihtw
-
 # Central WebSocket Server
 CENTRAL_WEBSOCKET_URL=https://server-yi14.onrender.com
 
-# WebSocket Port
-WS_PORT=4000
-
 # Central Backend Server
-CENTRAL_BACKEND_URL= https://backend-ether.onrender.com
+CENTRAL_BACKEND_URL=https://backend-ether.onrender.com
 
 # Server Port
 PORT=5000
-
-# Github
-GITHUB_CLIENT_ID=Iv23li2ZJouYuqAd5aeY
-GITHUB_CLIENT_SECRET=217084c936e6d20a2dec4607594ffd0f0a314867
-GITHUB_CALLBACK_URL=http://localhost:8080/api/auth/github/callback
