--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 CENTRAL_WEBSOCKET_URL=https://server-yi14.onrender.com
 CENTRAL_BACKEND_URL=https://backend-ether.onrender.com
 PORT=5000
+
+# Frontend Environment Variables
+VITE_API_URL=https://backend-ether.onrender.com/api
+VITE_WEBSOCKET_URL=https://server-yi14.onrender.com
